java/hsfs: use String charset arg for URLEncoder on Java 8 target
URLEncoder.encode(String, Charset) is Java 10+. The Java SDK is
compiled with --target 1.8, so the Charset overload isn't on the
classpath at compile time. Switch to the (String, String) overload
with "UTF-8" and annotate the calling method with @SneakyThrows to
suppress the checked UnsupportedEncodingException (the literal is
guaranteed-supported by the JVM).